--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="parallax"></div>
-        <div class="contentSection">
+        <div class="contentSection" id="trigger1">
             <sl-button onclick="topFunction()" class="rttFlower">
                 <img class="flower" src="./images/FMN_flower.svg" alt="Forget me not flower" style="width:10vw;height:10vw;">
             </sl-button>
@@ -83,33 +83,36 @@
                 <div style="position: relative; margin-top: 15vw;">
                     <div style="display: flex; justify-content: center;">
                         <div class="">
-                            <!--<img class="" src="" alt="1" /> --></div>
+                            <!--<img class="" src="" alt="1" /> -->
+                        </div>
                         <div class=""></div>
                     </div>
                     <div>
                         <div class="leftContainer">
-                            <div style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <div class="dementiaFact" id="fact1" style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                                 <div style="margin-left: 1%;">Dementia is not one specific disease</div>
                             </div>
-                            <div style="margin-left: 1%;">- it is a collection of symptoms caused by disorders which affect the brain
+                            <div class="dementiaFact" id="fact2" style="margin: 1vw 0 0 0; display: flex; justify-content: center; align-items: center;">- it is a collection of symptoms caused by disorders which affect the brain
                             </div>
                         </div>
                         <div class="rightContainer">
-                            <div style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;"> <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div class="dementiaFact" id="fact3" style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                                 <div style="margin-left: 1%;">Dementia affects thinking, behaviour and ability to perform everyday tasks</div>
                             </div>
                         </div>
                     </div>
                     <div>
                         <div class="leftContainer">
-                            <div style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <div class="dementiaFact" id="fact4" style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                                 <div style="margin-left: 1%;">It is not a normal part of aging process</div>
                             </div>
                         </div>
                         <div class="rightContainer">
-                            <div style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;"> <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div class="dementiaFact" id="fact5" style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                                 <div style="margin-left: 1%;">Brain function affected enough to interfere with normal social and working life
                                 </div>
                             </div>
@@ -117,41 +120,43 @@
                     </div>
                     <div>
                         <div class="leftContainer">
-                            <div style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <div class="dementiaFact" id="fact6" style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                                 <div style="margin-left: 1%;">Loss of cognitive function and functional independence beyond the level expected for normal ageing</div>
                             </div>
                         </div>
                         <div class="rightContainer">
-                            <div style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;"> <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div class="dementiaFact" id="fact7" style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                                 <div style="margin-left: 1%;">A permanent and progressive disease which affects an individuals’ ability to perform every day activities and care for themselves</div>
                             </div>
                         </div>
                     </div>
                     <div>
                         <div class="leftContainer">
-                            <div style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <div class="dementiaFact" id="fact8" style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                                 <div style="margin-left: 1%;">Impaired cognitive function often accompanied by deterioration in emotional control, social behaviour and motivation</div>
                             </div>
                         </div>
                         <div class="rightContainer">
-                            <div style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;"> <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div class="dementiaFact" id="fact9" style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                                 <div style="margin-left: 1%;">Appreciable disturbance to higher cortical functions such as:
                                 </div>
                             </div>
-                            <div style="margin-left: 1%;">complex attention, executive function, learning and memory, language, and perceptual-motor or social cognition</div>
+                            <div class="dementiaFact" id="fact10" style="margin: 1vw 0 0 0; display: flex; justify-content: center; align-items: center;">complex attention, executive function, learning and memory, language, and perceptual-motor or social cognition</div>
                         </div>
                     </div>
                     <div>
                         <div class="leftContainer">
-                            <div style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <div class="dementiaFact" id="fact11" style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                                 <div style="margin-left: 1%;">As dementia illness progresses, the person may develop behaviours that may seem unusual/out of character</div>
                             </div>
                         </div>
                         <div class="rightContainer">
-                            <div style="margin: 5vw 0 5vw 0; display: flex; justify-content: center; align-items: center;">
+                            <div class="dementiaFact" id="fact12" style="margin: 5vw 0 5vw 0; display: flex; justify-content: center; align-items: center;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                                 <div style="margin-left: 1%;">There are 120 different causes of dementia</div>
                             </div>
@@ -272,7 +277,8 @@
                 <div style="position: relative; margin-top: 15vw;">
                     <div style="display: flex; justify-content: center;">
                         <div class="">
-                            <!-- <img class="" src="" alt="1" /> --></div>
+                            <!-- <img class="" src="" alt="1" /> -->
+                        </div>
                         <div class="">Symptoms of dementia</div>
                     </div>
                     <div style="display: flex;">
@@ -532,6 +538,8 @@
         </div>
         <div class="parallax"></div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
     <script src="main.js"></script>
 </body>
 
