--- a/index.html
+++ b/index.html
@@ -214,14 +214,16 @@
                     </div>
                 </div>
             </div>
-            <!-- <svg width="100%" height="100%" id="svg">
-                <path id="path"
+            <!-- <div id="placeholder1" ></div> -->
+            <div id="placeholder1" style="position:relative; transform:translate(-50%, -50%); width: 100px; height: 100px; background-color: blue;"></div>
+            <svg width="100%" height="100%" id="svg">
+                <path id="path" style="z-index: 1000; position: absolute; transform: translate(-50%, -50%); height: 100px; width: 100px; background-color: blue;"
                     d="M-23.757,76.544 C-16.757,57.544 26.243,-0.456 99.243,-1.456 174.243,-1.456 205.125,37.176 233.039,63.275 268.055,96.014 349.013,156.718 416.79,156.163" />
                 <g id="commonType1">
-                    <rect width="85" height="30" fill="dodgerblue" />
-                    <text x="10" y="19" font-size="14">SVG &lt;rect&gt;</text>
+                    <!-- <rect width="85" height="30" fill="dodgerblue" />
+                    <text x="10" y="19" font-size="14">SVG &lt;rect&gt;</text> -->
                 </g>
-            </svg> -->
+            </svg>
 
             <div class="contentContainer"
                 style="height:80%; width: 80%; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display:flex; align-items:center">
@@ -248,7 +250,7 @@
         <!-- <div class="contentSection" style="height: 100vh; display:block;"> -->
 
         <div class="contentSection"
-            style="flex-wrap:wrap; padding:10% 7%; align-items:center; justify-content:center; min-height: 100vh;">
+            style="flex-wrap:wrap; padding:12% 7% 12% 7%; align-items:center; justify-content:center;">
             <div
                 style="position: absolute; top:0; width: 100%; height: 10vh; display: flex; justify-content: flex-end; align-items: center;">
                 <div class="contentSectionHeading">4 MAIN CAUSES</div>
@@ -339,7 +341,7 @@
         </div>
         <div class="parallax"></div>
         <!-- DEMENTIA AMONG US SECTION -->
-        <div class="contentSection" style="height: 100vh;">
+        <div class="contentSection">
             <div
                 style="position: absolute; top:0; width: 100%; height: 10vh; display: flex; justify-content: flex-end; align-items: center;">
                 <div class="contentSectionHeading">DEMENTIA AMONG US</div>
@@ -367,7 +369,7 @@
                         million
                         Australians will be living with dementia by 2058</div>
                 </div>
-                <div style="position: relative; height: 100%;">
+                <div style="position: relative;">
                     <div style="display: flex; justify-content: center;">
                         <div class="">
                             <!-- <img class="" src="" alt="1" /> -->
@@ -376,14 +378,14 @@
                     </div>
                     <div style="display: flex;">
                         <div class="leftContainer" style="width: 50%;">
-                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-right: 2%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>PROBLEMS WITH RECENT MEMORY</div>
                             </div>
                         </div>
                         <div class="rightContainer" style="width: 50%;">
-                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-left: 2%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>CONFUSED WITH PLACES AND TIME</div>
@@ -392,14 +394,14 @@
                     </div>
                     <div style="display: flex;">
                         <div class="leftContainer" style="width: 50%;">
-                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-right: 2%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>PROBLEMS WITH VISUAL PERCEPTION</div>
                             </div>
                         </div>
                         <div class="rightContainer" style="width: 50%;">
-                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-left: 2%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>DIFFICULTIES IN PLANNING AND THINKING</div>
@@ -408,14 +410,14 @@
                     </div>
                     <div style="display: flex;">
                         <div class="leftContainer" style="width: 50%;">
-                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-right: 2%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>CHANGES IN MOOD, BEHAVIOUR AND PERSONALITY</div>
                             </div>
                         </div>
                         <div class="rightContainer" style="width: 50%;">
-                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-left: 2%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>DIFFICULTIES IN COMMUNICATION</div>
@@ -424,14 +426,14 @@
                     </div>
                     <div style="display: flex;">
                         <div class="leftContainer" style="width: 50%;">
-                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-right: 2%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>PROBLEMS WITH WALKING AND MOBILITY</div>
                             </div>
                         </div>
                         <div class="rightContainer" style="width: 50%;">
-                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-left: 2%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>POOR JUDGEMENT AND IMPAIRED SOCIAL BEHAVIOUR</div>
@@ -440,14 +442,14 @@
                     </div>
                     <div style="display: flex;">
                         <div class="leftContainer" style="width: 50%;">
-                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-right: 2%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>MISPLACING THINGS</div>
                             </div>
                         </div>
                         <div class="rightContainer" style="width: 50%;">
-                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-left: 2%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>DIFFICULTIES COMPLETING FAMILIAR TASKS</div>
