--- a/index.html
+++ b/index.html
@@ -215,9 +215,12 @@
                 </div>
             </div>
             <!-- <div id="placeholder1" ></div> -->
-            <div id="placeholder1" style="position:relative; transform:translate(-50%, -50%); width: 100px; height: 100px; background-color: blue;"></div>
+            <div id="placeholder1"
+                style="position:relative; transform:translate(-50%, -50%); width: 100px; height: 100px; background-color: blue;">
+            </div>
             <svg width="100%" height="100%" id="svg">
-                <path id="path" style="z-index: 1000; position: absolute; transform: translate(-50%, -50%); height: 100px; width: 100px; background-color: blue;"
+                <path id="path"
+                    style="z-index: 1000; position: absolute; transform: translate(-50%, -50%); height: 100px; width: 100px; background-color: blue;"
                     d="M-23.757,76.544 C-16.757,57.544 26.243,-0.456 99.243,-1.456 174.243,-1.456 205.125,37.176 233.039,63.275 268.055,96.014 349.013,156.718 416.79,156.163" />
                 <g id="commonType1">
                     <!-- <rect width="85" height="30" fill="dodgerblue" />
@@ -262,7 +265,7 @@
                 This type of dementia kinda sucks... I mean, they all do, but this one is particularly shit.
                 Why, you ask? I have no idea. Just because!
                 <sl-button slot="footer" type="primary">Close</sl-button>
-              </sl-dialog>
+            </sl-dialog>
             <div class="cardContainer dementiaTypeCard col-3 col-xs-6">
                 <sl-card class="card-overview">
                     <div class="cardImageContainer">
@@ -283,7 +286,7 @@
             </div>
             <sl-dialog label="Type 2" id="dementiaDialog2" class="dialog-overview" style="color:black;">
                 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              </sl-dialog>
+            </sl-dialog>
             <div class="cardContainer dementiaTypeCard col-3 col-xs-6">
                 <sl-card class="card-overview">
                     <div class="cardImageContainer">
@@ -622,6 +625,9 @@
                     <img class="flower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                 </sl-button>
             </div>
+            <sl-dialog id="galleryImage1" class="dialog-overview" no-header="true">
+                <img src="images/FMN_flower.svg" alt="img1?">
+            </sl-dialog>
             <div class="cardContainer col-3 col-xs-6">
                 <sl-card class="card-basic">
                     <img class="cardImage" src="/images/FMN_flower.svg" alt="" />
